[gd_scene load_steps=7 format=2]

[ext_resource path="res://Item.gd" type="Script" id=1]
[ext_resource path="res://ItemPickup.gd" type="Script" id=2]
[ext_resource path="res://ItemUI.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.8, 0.8, 0.8, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_detail = 1

[node name="Item" type="Node2D"]
script = ExtResource( 1 )

[node name="ItemPickup" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -13.5
margin_right = 157.0
margin_bottom = 13.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ItemPickup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -12.0
margin_right = 157.5
margin_bottom = 12.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ItemPickup/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.5
margin_top = -10.0
margin_right = 155.5
margin_bottom = 10.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ITEMNAME" type="Label" parent="ItemPickup/ColorRect/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -8.0
margin_right = 152.5
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ITEM NAME"
align = 1
valign = 1
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemUI" parent="ItemPickup" instance=ExtResource( 3 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = 2.8446
margin_top = -240.251
margin_right = 358.845
margin_bottom = 241.749

[connection signal="implicitSet" from="." to="ItemPickup/ItemUI" method="_on_Item_implicitSet"]
[connection signal="nameSet" from="." to="ItemPickup" method="_on_Item_nameSet"]
[connection signal="nameSet" from="." to="ItemPickup/ItemUI" method="_on_Item_nameSet"]
[connection signal="raritySet" from="." to="ItemPickup" method="_on_Item_raritySet"]
[connection signal="raritySet" from="." to="ItemPickup/ItemUI" method="_on_Item_raritySet"]
[connection signal="mouse_entered" from="ItemPickup/ColorRect/Button" to="ItemPickup/ItemUI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="ItemPickup/ColorRect/Button" to="ItemPickup/ItemUI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="ItemPickup/ColorRect/Button" to="ItemPickup" method="_on_Button_pressed"]
